--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install pytest numpy sympy matplotlib
+        pip install pytest numpy sympy matplotlib scipy
     - name: Test with pytest
       run: |
         pytest *.py
